	ECL_OPT_TRAP_SIGFPE,
	ECL_OPT_TRAP_SIGINT,
	ECL_OPT_TRAP_SIGILL,
	ECL_OPT_TRAP_SIGBUS,
	ECL_OPT_BOOTED, /* read only */
	ECL_OPT_BIND_STACK_SIZE,
	ECL_OPT_BIND_STACK_SAFETY_AREA,
	ECL_OPT_FRAME_STACK_SIZE,
	ECL_OPT_FRAME_STACK_SAFETY_AREA,
	ECL_OPT_LISP_STACK_SIZE,
	ECL_OPT_LISP_STACK_SAFETY_AREA,
	ECL_OPT_C_STACK_SIZE,
	ECL_OPT_C_STACK_SAFETY_AREA,
	ECL_OPT_SIGALTSTACK_SIZE,
	ECL_OPT_LIMIT

* Bugs fixed:

 - The optimizer for COERCE might enter an infinite loop for certain
   type intervals.

 - The sharp macros #n# and #n=... did not work well with arrays of an
   specialized type.

 - Deactivate --enable-asmapply by default, because it is still an experimental
   feature.

 - In compiled files, externalize package objects using FIND-PACKAGE.

 - In RUN-PROGRAM, there were two bugs: first, the keyword :WAIT was not
   defined in the C core and caused an error when used; second, if the output
   stream was missing or directed to the standard output, it would fail.

 - SI:LOAD-FOREIGN-MODULE does not coerce the library name to a truename
   before loading. Instead, it leaves this task to the appropriate routine,
   dlopen or similar.

 - Bytecode objects created inside an eval-when had an invalid name.

 - SI:LOAD-FOREIGN-MODULE now relies on dlopen/LibraryLoad/... to find the
   foreign libraries. Nevertheless, duplicate libraries are still identified
	> (si::load-foreign-module "libm.dylib")
	#<codeblock "libm.dylib">
	> (si::load-foreign-module "/usr/lib/libm.dylib")
	#<codeblock "libm.dylib">

 - In reading functions, the value of :RECURSIVE-P should not interfere with
   that of :EOF-ERROR-P.

 - The MSVC port can be built with support for unicode characters.

 - PROCLAIM/DECLAIM now understand the abbreviated form of type declarations
   user-defined and complex types.

 - Sharp-dot macro reader (#.) gets its own sharp-equal context (#=) so that
   the following form
	(read-from-string "'#.(princ (list '#1=(1 2) '#1#))")